src/main/java/com/rakovets/course/javabasics/example/datatypes/Example6KeywordVar.java
package com.rakovets.course.javabasics.example.datatypes;

public class Example6KeywordVar {
    public static void main(String[] args) {
        var x = 10;
        System.out.println(x); // 10

//        var y; // error: cannot infer type for local variable y
//        y = 10;
    }
}
